todos-api/buffalo/base/migrate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert --file=docker-compose.yml --out=./base
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/default: "true"
    io.kompose.network/todos-api-buffalo-dbnet: "true"
    io.kompose.service: migrate
  name: migrate
spec:
  containers:
    - args:
        - migrate
      command:
        - /bin/app
      image: ghcr.io/todos-api/buffalo:docker-image
      name: migrate
      resources: {}
  restartPolicy: OnFailure
status: {}
