todos-api/buffalo/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file=docker-compose.db.yml --out=./base
    kompose.service.port: "5432"
    kompose.service.type: ClusterIP
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
  type: ClusterIP
status:
  loadBalancer: {}
