todos-api/buffalo/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file=docker-compose.yml --out=./base
    kompose.service.port: "3000"
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: web
  type: LoadBalancer
status:
  loadBalancer: {}
