todos-api/buffalo/base/todos-api-buffalo-dbnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: todos-api-buffalo-dbnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/todos-api-buffalo-dbnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/todos-api-buffalo-dbnet: "true"
